--- a/Rmd/LPS_DESeq-contrasts-0.05_Pdam.Rmd
+++ b/Rmd/LPS_DESeq-contrasts-0.05_Pdam.Rmd
@@ -19,8 +19,16 @@ resultsNames(dds_LPS)
 ### LPS vs. Control
 ```{r}
 res_LPS_ctrl <- results(dds_LPS, contrast = c("Treatment", "LPS", "control"))
-res_LPS_ctrl$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_LPS_ctrl$IDGeneInfo <- as.character(res_LPS_ctrl$IDGeneInfo)
+###
+res_LPS_ctrl$ID <- mcols(dds_LPS)$ID
+res_LPS_ctrl$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_LPS_ctrl$KO_terms <- mcols(dds_LPS)$KO_terms
+res_LPS_ctrl$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_LPS_ctrl$ID <- as.character(res_LPS_ctrl$ID)
+res_LPS_ctrl$GeneInfo <- as.character(res_LPS_ctrl$GeneInfo)
+res_LPS_ctrl$KO_terms <- as.character(res_LPS_ctrl$KO_terms)
+res_LPS_ctrl$Pfam_domains <- as.character(res_LPS_ctrl$Pfam_domains)
+###
 write.csv(as.data.frame(res_LPS_ctrl[order(res_LPS_ctrl$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_LPS_ctrl_FDR5.csv")
 resfdr5_LPS_ctrl <- subset(res_LPS_ctrl, padj<0.05)
 resfdr5_LPS_ctrl_up <- subset(res_LPS_ctrl, padj<0.05 & log2FoldChange>0)
@@ -36,8 +44,16 @@ summary(resfdr5_LPS_ctrl)
 ### Houwan1 vs. Houwan2
 ```{r}
 res_HW1_HW2 <- results(dds_LPS, contrast = c("Colony", "HW1", "HW2"))
-res_HW1_HW2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_HW1_HW2$IDGeneInfo <- as.character(res_HW1_HW2$IDGeneInfo)
+###
+res_HW1_HW2$ID <- mcols(dds_LPS)$ID
+res_HW1_HW2$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_HW1_HW2$KO_terms <- mcols(dds_LPS)$KO_terms
+res_HW1_HW2$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_HW1_HW2$ID <- as.character(res_HW1_HW2$ID)
+res_HW1_HW2$GeneInfo <- as.character(res_HW1_HW2$GeneInfo)
+res_HW1_HW2$KO_terms <- as.character(res_HW1_HW2$KO_terms)
+res_HW1_HW2$Pfam_domains <- as.character(res_HW1_HW2$Pfam_domains)
+###
 write.csv(as.data.frame(res_HW1_HW2[order(res_HW1_HW2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_HW2_FDR5.csv")
 resfdr5_HW1_HW2 <- subset(res_HW1_HW2, padj<0.05)
 resfdr5_HW1_HW2_up <- subset(res_HW1_HW2, padj<0.05 & log2FoldChange>0)
@@ -52,8 +68,16 @@ summary(res_HW1_HW2)
 ### Houwan1 vs. Wanglitung1
 ```{r}
 res_HW1_WT1 <- results(dds_LPS, contrast = c("Colony", "HW1", "WT1"))
-res_HW1_WT1$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_HW1_WT1$IDGeneInfo <- as.character(res_HW1_WT1$IDGeneInfo)
+###
+res_HW1_WT1$ID <- mcols(dds_LPS)$ID
+res_HW1_WT1$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_HW1_WT1$KO_terms <- mcols(dds_LPS)$KO_terms
+res_HW1_WT1$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_HW1_WT1$ID <- as.character(res_HW1_WT1$ID)
+res_HW1_WT1$GeneInfo <- as.character(res_HW1_WT1$GeneInfo)
+res_HW1_WT1$KO_terms <- as.character(res_HW1_WT1$KO_terms)
+res_HW1_WT1$Pfam_domains <- as.character(res_HW1_WT1$Pfam_domains)
+###
 write.csv(as.data.frame(res_HW1_WT1[order(res_HW1_WT1$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_WT1_FDR5.csv")
 resfdr5_HW1_WT1 <- subset(res_HW1_WT1, padj<0.05)
 resfdr5_HW1_WT1_up <- subset(res_HW1_WT1, padj<0.05 & log2FoldChange>0)
@@ -68,8 +92,16 @@ summary(res_HW1_WT1)
 ### Houwan1 vs. Wanglitung2
 ```{r}
 res_HW1_WT2 <- results(dds_LPS, contrast = c("Colony", "HW1", "WT2"))
-res_HW1_WT2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_HW1_WT2$IDGeneInfo <- as.character(res_HW1_WT2$IDGeneInfo)
+###
+res_HW1_WT2$ID <- mcols(dds_LPS)$ID
+res_HW1_WT2$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_HW1_WT2$KO_terms <- mcols(dds_LPS)$KO_terms
+res_HW1_WT2$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_HW1_WT2$ID <- as.character(res_HW1_WT2$ID)
+res_HW1_WT2$GeneInfo <- as.character(res_HW1_WT2$GeneInfo)
+res_HW1_WT2$KO_terms <- as.character(res_HW1_WT2$KO_terms)
+res_HW1_WT2$Pfam_domains <- as.character(res_HW1_WT2$Pfam_domains)
+###
 write.csv(as.data.frame(res_HW1_WT2[order(res_HW1_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_WT2_FDR5.csv")
 resfdr5_HW1_WT2 <- subset(res_HW1_WT2, padj<0.05)
 resfdr5_HW1_WT2_up <- subset(res_HW1_WT2, padj<0.05 & log2FoldChange>0)
@@ -84,8 +116,16 @@ summary(res_HW1_WT2)
 ### Houwan2 vs. Wanglitung1
 ```{r}
 res_HW2_WT1 <- results(dds_LPS, contrast = c("Colony", "HW2", "WT1"))
-res_HW2_WT1$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_HW2_WT1$IDGeneInfo <- as.character(res_HW2_WT1$IDGeneInfo)
+###
+res_HW2_WT1$ID <- mcols(dds_LPS)$ID
+res_HW2_WT1$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_HW2_WT1$KO_terms <- mcols(dds_LPS)$KO_terms
+res_HW2_WT1$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_HW2_WT1$ID <- as.character(res_HW2_WT1$ID)
+res_HW2_WT1$GeneInfo <- as.character(res_HW2_WT1$GeneInfo)
+res_HW2_WT1$KO_terms <- as.character(res_HW2_WT1$KO_terms)
+res_HW2_WT1$Pfam_domains <- as.character(res_HW2_WT1$Pfam_domains)
+###
 write.csv(as.data.frame(res_HW2_WT1[order(res_HW2_WT1$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW2_WT1_FDR5.csv")
 resfdr5_HW2_WT1 <- subset(res_HW2_WT1, padj<0.05)
 resfdr5_HW2_WT1_up <- subset(res_HW2_WT1, padj<0.05 & log2FoldChange>0)
@@ -100,8 +140,16 @@ summary(res_HW2_WT1)
 ### Houwan2 vs. Wanglitung2
 ```{r}
 res_HW2_WT2 <- results(dds_LPS, contrast = c("Colony", "HW2", "WT2"))
-res_HW2_WT2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_HW2_WT2$IDGeneInfo <- as.character(res_HW2_WT2$IDGeneInfo)
+###
+res_HW2_WT2$ID <- mcols(dds_LPS)$ID
+res_HW2_WT2$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_HW2_WT2$KO_terms <- mcols(dds_LPS)$KO_terms
+res_HW2_WT2$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_HW2_WT2$ID <- as.character(res_HW2_WT2$ID)
+res_HW2_WT2$GeneInfo <- as.character(res_HW2_WT2$GeneInfo)
+res_HW2_WT2$KO_terms <- as.character(res_HW2_WT2$KO_terms)
+res_HW2_WT2$Pfam_domains <- as.character(res_HW2_WT2$Pfam_domains)
+###
 write.csv(as.data.frame(res_HW2_WT2[order(res_HW2_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW2_WT2_FDR5.csv")
 resfdr5_HW2_WT2 <- subset(res_HW2_WT2, padj<0.05)
 resfdr5_HW2_WT2_up <- subset(res_HW2_WT2, padj<0.05 & log2FoldChange>0)
@@ -116,8 +164,16 @@ summary(res_HW2_WT2)
 ### Wanglitung1 vs. Wanglitung2
 ```{r}
 res_WT1_WT2 <- results(dds_LPS, contrast = c("Colony", "WT1", "WT2"))
-res_WT1_WT2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
-res_WT1_WT2$IDGeneInfo <- as.character(res_WT1_WT2$IDGeneInfo)
+###
+res_WT1_WT2$ID <- mcols(dds_LPS)$ID
+res_WT1_WT2$GeneInfo <- mcols(dds_LPS)$GeneInfo
+res_WT1_WT2$KO_terms <- mcols(dds_LPS)$KO_terms
+res_WT1_WT2$Pfam_domains <- mcols(dds_LPS)$Pfam_domains
+res_WT1_WT2$ID <- as.character(res_WT1_WT2$ID)
+res_WT1_WT2$GeneInfo <- as.character(res_WT1_WT2$GeneInfo)
+res_WT1_WT2$KO_terms <- as.character(res_WT1_WT2$KO_terms)
+res_WT1_WT2$Pfam_domains <- as.character(res_WT1_WT2$Pfam_domains)
+###
 write.csv(as.data.frame(res_WT1_WT2[order(res_WT1_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_WT1_WT2_FDR5.csv")
 resfdr5_WT1_WT2 <- subset(res_WT1_WT2, padj<0.05)
 resfdr5_WT1_WT2_up <- subset(res_WT1_WT2, padj<0.05 & log2FoldChange>0)
@@ -133,8 +189,16 @@ summary(res_WT1_WT2)
 ### Houwan1
 ```{r}
 res_HW1_LPS <- results(dds_HW1, contrast = c("Treatment", "LPS", "control"))
-res_HW1_LPS$IDGeneInfo <- mcols(dds_HW1)$IDGeneInfo
-res_HW1_LPS$IDGeneInfo <- as.character(res_HW1_LPS$IDGeneInfo)
+###
+res_HW1_LPS$ID <- mcols(dds_HW1)$ID
+res_HW1_LPS$GeneInfo <- mcols(dds_HW1)$GeneInfo
+res_HW1_LPS$KO_terms <- mcols(dds_HW1)$KO_terms
+res_HW1_LPS$Pfam_domains <- mcols(dds_HW1)$Pfam_domains
+res_HW1_LPS$ID <- as.character(res_HW1_LPS$ID)
+res_HW1_LPS$GeneInfo <- as.character(res_HW1_LPS$GeneInfo)
+res_HW1_LPS$KO_terms <- as.character(res_HW1_LPS$KO_terms)
+res_HW1_LPS$Pfam_domains <- as.character(res_HW1_LPS$Pfam_domains)
+###
 write.csv(as.data.frame(res_HW1_LPS[order(res_HW1_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_LPS_FDR5.csv")
 resfdr5_HW1_LPS <- subset(res_HW1_LPS, padj<0.05)
 resfdr5_HW1_LPS_up <- subset(res_HW1_LPS, padj<0.05 & log2FoldChange>0)
@@ -149,8 +213,16 @@ summary(resfdr5_HW1_LPS)
 ### Houwan2
 ```{r}
 res_HW2_LPS <- results(dds_HW2, contrast = c("Treatment", "LPS", "control"))
-res_HW2_LPS$IDGeneInfo <- mcols(dds_HW2)$IDGeneInfo
-res_HW2_LPS$IDGeneInfo <- as.character(res_HW2_LPS$IDGeneInfo)
+###
+res_HW2_LPS$ID <- mcols(dds_HW2)$ID
+res_HW2_LPS$GeneInfo <- mcols(dds_HW2)$GeneInfo
+res_HW2_LPS$KO_terms <- mcols(dds_HW2)$KO_terms
+res_HW2_LPS$Pfam_domains <- mcols(dds_HW2)$Pfam_domains
+res_HW2_LPS$ID <- as.character(res_HW2_LPS$ID)
+res_HW2_LPS$GeneInfo <- as.character(res_HW2_LPS$GeneInfo)
+res_HW2_LPS$KO_terms <- as.character(res_HW2_LPS$KO_terms)
+res_HW2_LPS$Pfam_domains <- as.character(res_HW2_LPS$Pfam_domains)
+###
 write.csv(as.data.frame(res_HW2_LPS[order(res_HW2_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW2_LPS_FDR5.csv")
 resfdr5_HW2_LPS <- subset(res_HW2_LPS, padj<0.05)
 resfdr5_HW2_LPS_up <- subset(res_HW2_LPS, padj<0.05 & log2FoldChange>0)
@@ -165,8 +237,16 @@ summary(resfdr5_HW2_LPS)
 ### Wanglitung1
 ```{r}
 res_WT1_LPS <- results(dds_WT1, contrast = c("Treatment", "LPS", "control"))
-res_WT1_LPS$IDGeneInfo <- mcols(dds_WT1)$IDGeneInfo
-res_WT1_LPS$IDGeneInfo <- as.character(res_WT1_LPS$IDGeneInfo)
+###
+res_WT1_LPS$ID <- mcols(dds_WT1)$ID
+res_WT1_LPS$GeneInfo <- mcols(dds_WT1)$GeneInfo
+res_WT1_LPS$KO_terms <- mcols(dds_WT1)$KO_terms
+res_WT1_LPS$Pfam_domains <- mcols(dds_WT1)$Pfam_domains
+res_WT1_LPS$ID <- as.character(res_WT1_LPS$ID)
+res_WT1_LPS$GeneInfo <- as.character(res_WT1_LPS$GeneInfo)
+res_WT1_LPS$KO_terms <- as.character(res_WT1_LPS$KO_terms)
+res_WT1_LPS$Pfam_domains <- as.character(res_WT1_LPS$Pfam_domains)
+###
 write.csv(as.data.frame(res_WT1_LPS[order(res_WT1_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_WT1_LPS_FDR5.csv")
 resfdr5_WT1_LPS <- subset(res_WT1_LPS, padj<0.05)
 resfdr5_WT1_LPS_up <- subset(res_WT1_LPS, padj<0.05 & log2FoldChange>0)
@@ -181,8 +261,16 @@ summary(resfdr5_WT1_LPS)
 ### Wanglitung2
 ```{r}
 res_WT2_LPS <- results(dds_WT2, contrast = c("Treatment", "LPS", "control"))
-res_WT2_LPS$IDGeneInfo <- mcols(dds_WT2)$IDGeneInfo
-res_WT2_LPS$IDGeneInfo <- as.character(res_WT2_LPS$IDGeneInfo)
+###
+res_WT2_LPS$ID <- mcols(dds_WT2)$ID
+res_WT2_LPS$GeneInfo <- mcols(dds_WT2)$GeneInfo
+res_WT2_LPS$KO_terms <- mcols(dds_WT2)$KO_terms
+res_WT2_LPS$Pfam_domains <- mcols(dds_WT2)$Pfam_domains
+res_WT2_LPS$ID <- as.character(res_WT2_LPS$ID)
+res_WT2_LPS$GeneInfo <- as.character(res_WT2_LPS$GeneInfo)
+res_WT2_LPS$KO_terms <- as.character(res_WT2_LPS$KO_terms)
+res_WT2_LPS$Pfam_domains <- as.character(res_WT2_LPS$Pfam_domains)
+###
 write.csv(as.data.frame(res_WT2_LPS[order(res_WT2_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_WT2_LPS_FDR5.csv")
 resfdr5_WT2_LPS <- subset(res_WT2_LPS, padj<0.05)
 resfdr5_WT2_LPS_up <- subset(res_WT2_LPS, padj<0.05 & log2FoldChange>0)
